test/modules/diten/returnClassDiffModule.good
returnClassDiffModule.chpl:12: In function 'main':
returnClassDiffModule.chpl:14: error: unresolved call 'unmanaged C.foo()'
